--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     </head>
 
     <body>
-        <h1>this is my heading</h1>
+        <!-- <h1>this is my heading</h1>
         <h2>this is my heading</h2>
         <h3>this is my heading</h3>
         <h4>this is my heading</h4>
@@ -20,6 +20,25 @@
 
         <img src="https://cdn.britannica.com/97/189797-050-1FC0041B/Night-view-Dhaka-Bangladesh.jpg" alt="">
 
-        <img src="Bangladesh.jpg" alt="">
+        <img src="Bangladesh.jpg" alt=""> -->
+
+        <h2>Forms</h2>
+        <p><input type="color"></p>
+        <p><input type="date" name="Date" id=""></p>
+        <p><input type="file"></p>
+
+        <p><textarea name="Text Here" id="" cols="30" rows="5"></textarea></p>
+
+        <p><select name="" id="">
+            <option value="">option 1</option>
+            <option value="">option 2</option>
+            <option value="">option 3</option>
+            <option value="">option 4</option>
+        </select></p>
+
+        <p><input type="radio">option 1</p>
+
+        <button>Submit</button>
+
     </body>
 </html>
